--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -108,6 +108,12 @@
             </intent-filter>
         </receiver>
 
+        <activity android:name="com.android.launcher2.preference.Preferences" />
+        <activity android:name="com.android.launcher2.preference.Homescreen" />
+        <activity android:name="com.android.launcher2.preference.Drawer" />
+        <activity android:name="com.android.launcher2.preference.HiddenAppsActivity" />
+        <activity android:name="com.android.launcher2.preference.Dock" />
+
         <!-- Intent received used to install shortcuts from other applications -->
         <receiver
             android:name="com.android.launcher2.InstallShortcutReceiver"
