Shortcuts: rename and custom icon
This is all CM work so all credits go to them.
https://github.com/CyanogenMod/android_packages_apps_Trebuchet/commit/10a908a32cab20d5fc0ee944a3b34b98a9648f68
https://github.com/CyanogenMod/android_packages_apps_Trebuchet/commit/596b71d43c5f13f2d0199ffdfeaa550e15838783
https://github.com/CyanogenMod/android_packages_apps_Trebuchet/commit/e576f6e7887b063d1b6d9a2052eedd4cc7c014ee

Change-Id: Id5b250f6e75c096ceb3beff410d9d0a6ad654ae0

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -114,6 +114,11 @@
         <activity android:name="com.android.launcher2.preference.Drawer" />
         <activity android:name="com.android.launcher2.preference.HiddenAppsActivity" />
         <activity android:name="com.android.launcher2.preference.Dock" />
+        <activity android:name="com.android.launcher2.IconPickerActivity"
+            android:exported="false"
+            android:excludeFromRecents="true"
+            android:noHistory="true"
+            android:launchMode="singleTop" />
 
         <!-- Intent received used to install shortcuts from other applications -->
         <receiver
